# php-syntax-analyzer

./: Cargo.toml  LICENSE  README.md  analyze.sh
results/: let.txt  scope.txt  using.txt
rfcs/: optin_block_scoping.md  partial_function_application_this.md
src/: analyzer.rs  downloader.rs  extractor.rs  files.rs  main.rs  results.rs
