[package]
name = "keyword-impact-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bumpalo = "3.19.0"
clap = { version = "4.5", features = ["derive"] }
cli-table = "0.5"
futures = "0.3"
mago-database = "1.0.0-beta.34"
mago-names = "1.0.0-beta.34"
mago-span = "1.0.0-beta.34"
mago-syntax = "1.0.0-beta.34"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-indicatif = "0.3.13"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zip = "2.2"
